# neodojo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  README.zh.md  STATUS.md  pyproject.toml
.github/workflows/: gvhmr-self-hosted-gpu.yml  promote-real-demo-pages.yml  public-demo.yml
docs/: humanoid-platform-evaluation.md  technical-roadmap.md
docs/adr/: 0003-profile-driven-execution-evidence.md
docs/plans/: g1-profile-driven-execution-architecture.md  mvp-devex-ci-surface.md  mvp-feedback-routine-review.md  mvp-g1-real-model-rendering.md  mvp-g1-visual-track.md  mvp-gmr-import-track.md  mvp-gvhmr-colab-operator-notebook.md  mvp-gvhmr-export-adapter.md  mvp-gvhmr-external-gpu-runbook.md  mvp-gvhmr-external-run-request.md  mvp-gvhmr-gpu-runner-surface.md  mvp-gvhmr-gpu-transfer-archive.md  mvp-gvhmr-operator-package.md  mvp-gvhmr-self-hosted-gpu-workflow.md  mvp-gvhmr-self-hosted-real-demo-intake.md  mvp-gvhmr-source-validation.md  mvp-implementation-phases.md  mvp-keyframe-feedback-detection.md  mvp-lint-build-surface.md  mvp-local-motion-contract.md  mvp-native-gmr-runner.md  mvp-pipeline-contract-hardening.md  mvp-quality-release-surface.md  mvp-real-conversion-gate.md  mvp-real-demo-pages-promotion.md  mvp-real-gpu-archive-command.md  mvp-real-gpu-colab-command.md  mvp-real-gvhmr-artifact-acquisition.md  mvp-rerun-pages-release.md  mvp-roboharness-capture-boundary.md  mvp-roboharness-simulator-recorder.md  mvp-simulator-mesh-rendering.md  mvp-smplx-body-surface-playback.md  mvp-smplx-licensed-mesh-rendering.md  mvp-source-media-materialization.md  mvp-source-media-probing.md  mvp-teaching-playback-demo.md  mvp-viser-multicamera-runtime.md  mvp-viser-production-teaching-ui.md  mvp-visualization-and-public-demo.md  (+4 more)
docs/runbooks/: gvhmr-external-gpu.md  gvhmr-local-gpu.md
src/neodojo/: cli.py  (+24 more)
tests/: test_demo_html.py  test_gmr_native.py  test_routine_pipeline.py
video/: README.md  download_originals.py  manifest.json  original_videos.csv  original_videos.json  original_videos.md
(+140 files in other folders)
