[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neodojo"
version = "0.1.0"
description = "Fixture-first teaching playback prototype for neodojo."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
neodojo = "neodojo.cli:main"

[project.optional-dependencies]
sim = ["mujoco>=3.3,<4"]
rerun = ["rerun-sdk>=0.32,<1"]
viser = ["viser>=1.0,<2"]
browser = ["playwright>=1.56,<2"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neodojo = ["templates/*.html"]
