[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neodojo"
version = "0.1.0"
description = "Fixture-first teaching playback prototype for neodojo."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[project.scripts]
neodojo = "neodojo.cli:main"

[project.optional-dependencies]
sim = ["mujoco>=3.3,<4"]
rerun = ["rerun-sdk>=0.32,<1"]
viser = ["viser>=1.0,<2"]
browser = ["playwright>=1.56,<2", "Pillow>=10,<13"]
real-g1-replay = [
    "mujoco>=3.3,<4",
    "roboharness[demo] @ git+https://github.com/MiaoDX/roboharness.git@0bd5551d92d56a041e5c1b12a68ca6a4b8963b16",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neodojo = ["templates/*.html", "templates/*.py", "templates/*.sh"]
